--- a/true.show/demo/asset/css/app.css
+++ b/true.show/demo/asset/css/app.css
@@ -1167,7 +1167,7 @@ plugin-warp.active .ui-resizable-handle {
     width: 100%;
     height: 100%;
     text-decoration: inherit;
-    line-height: 1.5em;
+    //line-height: 1.5em;
 }
 
 plugin-warp.state-disable:before {
