add Styles attributor

--- a/true.show/demo/asset/css/app.css
+++ b/true.show/demo/asset/css/app.css
@@ -1223,6 +1223,7 @@ plugin-warp.state-visible {
 }
 
 .form-control dl {
+    margin-top: 10px;
     display: table;
     width: 100%;
 }
@@ -1256,7 +1257,7 @@ plugin-warp.state-visible {
 }
 
 .form-control .textarea-box {
-    margin: 10px;
+    margin: 0px 10px;
     padding: 8px;
     background-color: #434343;
     color: #999;
@@ -1267,6 +1268,22 @@ plugin-warp.state-visible {
     height: 120px;
     border: 2px solid #666;
     resize: vertical;
+    outline: none;
+}
+
+.form-control .textarea-box:focus {
+    border-color: #f70;
+}
+.form-control input[type=number] {
+    border-radius: 5px;
+    width: 100px;
+    padding: 5px 8px;
+    border: 2px solid #666;
+    outline: none;
+}
+
+.form-control input[type=number]:focus {
+    border-color: #f70;
 }
 
 .form-control input[type=checkbox],
