--- a/true.show/demo/asset/css/workaround.css
+++ b/true.show/demo/asset/css/workaround.css
@@ -13,6 +13,11 @@ input[type="range"] {
     outline:0;
 }
 
+input[type="range"]:disabled::-webkit-slider-thumb {
+    background: none repeat scroll 0 0 #aaa;
+    cursor: not-allowed;
+}
+
 input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     top: -4px;
