--- a/true.show/demo/asset/css/workaround.css
+++ b/true.show/demo/asset/css/workaround.css
@@ -7,10 +7,10 @@ input[type="range"] {
     margin-top: 2px;
     background-color: #272728;
     border-radius: 15px;
-    width: 120px;
+    width: 100px;
     -webkit-appearance: none;
     height: 10px;
-    outline:0;
+    outline: 0;
 }
 
 input[type="range"]:disabled::-webkit-slider-thumb {
@@ -29,12 +29,34 @@ input[type="range"]::-webkit-slider-thumb {
     background: none repeat scroll 0 0 #09e;
     border-radius: 15px;
     -webkit-box-shadow: 0 -1px 1px black inset;
-    outline:0;
+    outline: none;
 }
 
-input[type="range"] + output {
+input[type="range"]:disabled + input {
+    background: #222;
+    color: #ccc;
+    border-color: #666;
+    cursor: not-allowed;
+}
+
+input[type="range"] + input {
     margin-left: 10px;
-    color: #999;
+    margin-right: 5px;
+    color: #fff;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
+    padding: 2px;
+    text-indent: 2px;
+    background: #222;
+    border-radius: 4px;
+    border: 2px solid #666;
+    outline: none;
+}
+
+input[type="range"] + input:focus {
+    border: 2px solid #f70;
 }
 
 input[type="color"] {
@@ -56,73 +78,96 @@ input[type="color"] {
 
 
 /* select */
-select
-{
-   width                    : 14em;
-   height                   : 3.2em;
-   padding                  : 0.2em 0.4em 0.2em 0.4em;
-   vertical-align           : middle;
-   border                   : 2px solid #222;
-   -moz-border-radius       : 0.2em;
-   -webkit-border-radius    : 0.2em;
-   border-radius            : 0.2em;
-   box-shadow               : inset 0 0 3px #222;
-   -webkit-appearance       : none;
-   -moz-appearance          : none;
-   appearance               : none;
-   font-family              : Arial,  Calibri, Tahoma, Verdana;
-   font-size                : 1.1em;
-   color                    : #000099;
-   cursor                   : pointer;
+
+select {
+    width: 14em;
+    height: 3.2em;
+    padding: 0.2em 0.4em 0.2em 0.4em;
+    vertical-align: middle;
+    border: 2px solid #222;
+    -moz-border-radius: 0.2em;
+    -webkit-border-radius: 0.2em;
+    border-radius: 0.2em;
+    box-shadow: inset 0 0 3px #222;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    font-family: Arial, Calibri, Tahoma, Verdana;
+    font-size: 1.1em;
+    color: #000099;
+    cursor: pointer;
 }
-select option
-{
-    font-size               : 1em;
-    padding                 : 0.2em 0.4em 0.2em 0.4em;
+
+select option {
+    font-size: 1em;
+    padding: 0.2em 0.4em 0.2em 0.4em;
 }
-select  option[selected]{ font-weight:bold}
-select  option:nth-child(even) { background-color:#09e; }
-select:hover
-{
-    color                   : #101010;
-    border                  : 2px solid #f70;
-}    
-select:focus {box-shadow: 0 0 2px 1px #f70;}
+
+select option[selected] {
+    font-weight: bold
+}
+
+select option:nth-child(even) {
+    background-color: #09e;
+}
+
+select:hover {
+    color: #101010;
+    border: 2px solid #f70;
+}
+
+select:focus {
+    box-shadow: 0 0 2px 1px #f70;
+}
+
 
 /*SELECT W/DOWN-ARROW*/
-select
-{
-   width                    : 120px;
-   height                   : 32px;
-   padding-right            : 10px;
-   text-indent              : 4px;
-   text-align               : left;
-   vertical-align           : middle;
-   box-shadow               : inset 0 0 3px #09e;
-   border                   : 2px solid #222;
-   -moz-border-radius       : 6px;
-   -webkit-border-radius    : 6px;
-   border-radius            : 6px;
-   -webkit-appearance       : none;
-   -moz-appearance          : none;
-   appearance               : none;
-   font-family              : Arial,  Calibri, Tahoma, Verdana;
-   font-size                : 14px;
-   font-weight              : bold;
-   color                    : #000099;
-   cursor                   : pointer;
-   outline                  : none;
+
+select {
+    width: 120px;
+    height: 32px;
+    padding-right: 10px;
+    text-indent: 4px;
+    text-align: left;
+    vertical-align: middle;
+    box-shadow: inset 0 0 3px #09e;
+    border: 2px solid #222;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    font-family: Arial, Calibri, Tahoma, Verdana;
+    font-size: 14px;
+    font-weight: bold;
+    color: #000099;
+    cursor: pointer;
+    outline: none;
 }
-select option
-{
-    padding             : 0 4px 0 2px;
-    font-size           : 11px;
-    font-weight         : normal;
+
+select option {
+    padding: 0 4px 0 2px;
+    font-size: 11px;
+    font-weight: normal;
 }
-select option[selected]{ font-weight:bold}
-select option:nth-child(even) { background-color:#f5f5f5; }
-select:hover {font-weight: bold;}
-select:focus {box-shadow: inset 0 0 5px #000099; font-weight: bold;}
+
+select option[selected] {
+    font-weight: bold
+}
+
+select option:nth-child(even) {
+    background-color: #f5f5f5;
+}
+
+select:hover {
+    font-weight: bold;
+}
+
+select:focus {
+    box-shadow: inset 0 0 5px #000099;
+    font-weight: bold;
+}
 
 
 /*
