--- a/true.show/demo/asset/css/app.css
+++ b/true.show/demo/asset/css/app.css
@@ -990,7 +990,7 @@ header {
     color: #ffffff;
 }
 
-.view-aside {
+.view-aside{
     position: absolute;
     top: 20%;
     right: -40px;
@@ -1001,11 +1001,42 @@ header {
     color: #999;
     overflow: hidden;
     width: 36px;
+    height: 70px;
     text-align: center;
 }
 
 
 /**声音组件结束**/
+
+/**播放当前页面动画*/
+
+.marker-animation {
+    font-size: 16px;
+    padding: 5px;
+    cursor: pointer;
+}
+.marker-animation i {
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+}
+
+.view-aside-animation{
+    position: absolute;
+    top: 30%;
+    right: -40px;
+    background: #444;
+    border-radius: 3px;
+    border: 1px solid #222;
+    box-shadow: inset 0 1px 0 0 #757575;
+    color: #999;
+    overflow: hidden;
+    width: 36px;
+    height: 70px;
+    text-align: center;
+}
+
+/**播放当前页面动画结果*/
 
 
 /**右击菜单开始**/
