--- a/true.show/demo/asset/css/app.css
+++ b/true.show/demo/asset/css/app.css
@@ -1725,6 +1725,10 @@ section .invisibility {
     visibility: hidden;
 }
 
+.invisibility {
+    visibility: hidden;
+}
+
 @-webkit-keyframes reverseRotataZ {
     0% {
         -webkit-transform: rotateZ(0deg);
